--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
       })
     })
     .then(() => {
-      status.textContent = "Заявка отправлена ✅ Я скоро свяжусь с вами";
+     status.innerHTML = `
+  <strong>Спасибо за заявку!</strong><br>
+  Я свяжусь с вами в ближайшее время 💬
+`;
       status.style.color = "#3b7a57";
       form.reset();
       button.textContent = "Отправлено";
@@ -181,4 +184,5 @@
 
 </body>
 </html>
+
 
