--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-   <!-- HERO -->
+  <!-- HERO -->
   <header class="hero">
     <h1>Онлайн-консультации с психологом</h1>
     <p>Помогаю справиться с тревожностью, выгоранием и сложными жизненными ситуациями</p>
@@ -91,7 +91,7 @@
   <!-- FORM -->
   <section id="contact-form" class="contact">
     <h2>Записаться на консультацию</h2>
-   <form id="contactForm">
+    <form id="contactForm" action="https://formspree.io/f/mrebwvkv" method="POST">
       <input type="text" name="name" placeholder="Ваше имя" required>
       <input type="text" name="contact" placeholder="Телефон или Telegram" required>
       <textarea name="message" placeholder="Сообщение" required></textarea>
@@ -119,69 +119,48 @@
     });
   </script>
 
-
+  <!-- JS для формы с Formspree -->
   <script>
-  const TOKEN = "8484376853:AAFZeXHgKYeuUoRlgBEjSySWPucHWwNMPyc";
-  const CHAT_ID = "1015596173";
+    const form = document.getElementById('contactForm');
+    const status = document.getElementById('form-status');
+    const button = form.querySelector('button[type="submit"]');
 
-   const form = document.getElementById('contactForm');
-  const status = document.getElementById('form-status');
-  const button = form.querySelector('button[type="submit"]');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
 
-  form.addEventListener('submit', function (e) {
-    e.preventDefault();
+      const formData = new FormData(form);
 
-    // защита от повторного клика
-    if (button.disabled) return;
+      button.disabled = true;
+      button.textContent = "Отправка...";
 
-    const name = form.querySelector('input[name="name"]').value.trim();
-    const contact = form.querySelector('input[name="contact"]').value.trim();
-    const message = form.querySelector('textarea[name="message"]').value.trim();
-
-    if (!name || !contact || !message) {
-      status.textContent = "Пожалуйста, заполните все поля";
-      status.style.color = "#a94442";
-      return;
-    }
-
-    button.disabled = true;
-    button.textContent = "Отправка...";
-
-    const text = `
-📩 Новая заявка с сайта
-👤 Имя: ${name}
-📞 Контакт: ${contact}
-💬 Сообщение: ${message}
-    `;
-
-    fetch(`https://api.telegram.org/bot${TOKEN}/sendMessage`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        chat_id: CHAT_ID,
-        text: text
+      fetch(form.action, {
+        method: 'POST',
+        body: formData,
+        headers: { 'Accept': 'application/json' }
       })
-    })
-    .then(() => {
-     status.innerHTML = `
-  <strong>Спасибо за заявку!</strong><br>
-  Я свяжусь с вами в ближайшее время 💬
-`;
-      status.style.color = "#3b7a57";
-      form.reset();
-      button.textContent = "Отправлено";
-    })
-    .catch(() => {
-      status.textContent = "Ошибка отправки ❌ Попробуйте позже";
-      status.style.color = "#a94442";
-      button.disabled = false;
-      button.textContent = "Отправить заявку";
+      .then(response => {
+        if (response.ok) {
+          status.innerHTML = `<strong>Спасибо за заявку!</strong><br>Я свяжусь с вами в ближайшее время 💬`;
+          status.style.color = "#3b7a57";
+          form.reset();
+          button.textContent = "Отправлено";
+        } else {
+          response.json().then(data => {
+            status.textContent = data.error || "Ошибка отправки ❌ Попробуйте позже";
+            status.style.color = "#a94442";
+            button.disabled = false;
+            button.textContent = "Отправить заявку";
+          });
+        }
+      })
+      .catch(() => {
+        status.textContent = "Ошибка отправки ❌ Попробуйте позже";
+        status.style.color = "#a94442";
+        button.disabled = false;
+        button.textContent = "Отправить заявку";
+      });
     });
-  });
-
-</script>
-
+  </script>
 
 </body>
 </html>
-
